--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,13 +1,14 @@
 name: Metrics Update
 
 on:
-  schedule: [{cron: "0 * * * *"}]
+  push:
+  schedule:
+    - cron: "0 */1 * * *"
   workflow_dispatch:
 
 jobs:
   markscribe:
-    runs-on: ubuntu-18.04
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
 
@@ -17,6 +18,11 @@ jobs:
         with:
           template: "templates/README.md.tpl"
           writeTo: "README.md"
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: README.md
+          path: README.md
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         env:
